--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "firebase": "^8.2.3",
+    "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-card-flip": "^1.0.7",
@@ -26,7 +27,9 @@
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
