--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^14.1.0",
     "@react-native-firebase/auth": "^14.1.0",
     "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "firebase": "^8.2.3",
