--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-flip-page": "^0.5.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-image-picker": "^4.6.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
