--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@digieggs/rn-country-code-picker": "^1.3.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.1.0",
     "@react-native-firebase/auth": "^14.1.0",
+    "@react-native-firebase/storage": "^14.1.0",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -26,10 +28,12 @@
     "react-native-flip-page": "^0.5.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.6.0",
+    "react-native-localize": "^2.1.7",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4"
   },
