bday input changed

--- a/package.json
+++ b/package.json
@@ -24,18 +24,23 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-card-flip": "^1.0.7",
+    "react-native-device-info": "^8.4.8",
     "react-native-elements": "^3.4.2",
     "react-native-flip-page": "^0.5.0",
+    "react-native-form-progress": "^1.0.24",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-localize": "^2.1.7",
+    "react-native-mask-input": "^1.1.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-number-format": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
