--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4",
-    "react-number-format": "^4.9.0"
+    "react-number-format": "^4.9.0",
+    "unique-names-generator": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
