--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-flip-page": "^0.5.0",
     "react-native-form-progress": "^1.0.24",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-localize": "^2.1.7",
