--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-form-progress": "^1.0.24",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.6.0",
     "react-native-localize": "^2.1.7",
     "react-native-mask-input": "^1.1.1",
